# AmritaAgent

./: .gitignore  README.md  pyproject.toml  run.py
amrita_agent/: __main__.py  app_view.py  config.py  constants.py  main.py
amrita_agent/components/: chat_area.py  history_area.py  settings_area.py  sidebar.py
amrita_agent/pages/: loading.py
amrita_agent/utils/: alert.py  chat.py  render.py
